[package]
name = "desk-disco"
version = "0.1.0"
authors = ["Asandei Stefan-Alexandru <asandei.stefanel@gmail.com>"]
edition = "2021"
license = "GPL v3"

[[bin]]
name = "arduino-flames"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
